<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".PlayerRegistrationActivity">


    <TextView
        android:id="@+id/title_registration_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Adicionar novo jogador"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/orange"/>

    <TextView
        android:id="@+id/player_id_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="32dp"
        android:text="ID: 1"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player_name_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:hint="@string/name_label"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/player_position_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:hint="@string/position_label"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/player_club_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:hint="@string/club_label"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/player_value_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:hint="@string/value_label"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:text="@string/cancel_label"/>
        <Button
            android:id="@+id/add_player_button_registration"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:layout_marginStart="8dp"
            android:text="@string/add_label"/>
    </LinearLayout>

</LinearLayout>